setting up mysql

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
       <form>
         <input id="you" type="text" placeholder="??" maxlength="2"></input>
-        <input id="m" autocomplete="off" type="text"></input>
+        <input id="m" autocomplete="off" placeholder="message" type="text"></input>
         <button>Send</button>
       </form>
     </main>
