--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html>
-  <head>
-    <title>CUEBC Chat App!</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    
-    <main role="main">
-      <ul id="messages">
-      </ul>
 
-      <form>
-        <input id="you" type="text" placeholder="??" maxlength="2"></input>
-        <input id="m" autocomplete="off" placeholder="message" type="text"></input>
-        <button>Send</button>
-      </form>
+<head>
+    <title>Eon Forums &amp; Chat</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+
+    <main role="main">
+        <ul id="messages">
+        </ul>
+
+        <form>
+            <input id="you" type="text" placeholder="??" maxlength="2"></input>
+            <input id="m" autocomplete="off" placeholder="message" type="text"></input>
+            <button>Send</button>
+        </form>
     </main>
 
     <!-- Javascript (behavior) code below -->
@@ -22,5 +24,6 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="app.js"></script>
 
-  </body>
+</body>
+
 </html>
